Quiz refinements. Start button functionality is corrected and, finally, coverRed element appears perfectly aligned and with correct size.

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -406,15 +406,17 @@ body{
 .cover {
     margin: 0 auto;
     transition:0.5s all;
+    position: relative;
 
     .coverRed {
         z-index: 10;
         position: absolute;
         display: none;
+
         left:0;
-        top:0;
-        width:100%;
-        height: 55%;
+        right:0;
+        margin-left:auto;
+        margin-right:auto;
         background-color: rgba(206, 14, 14, 0.6);
         transition:0.5s all;
         
